version/0.16/_sources/api/solver/_autosummary/settings/mesh_1.rst.txt
:orphan:

.. _mesh_1:

mesh
====

.. autoclass:: ansys.fluent.core.solver.settings_232.mesh_1.mesh
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`mesh_child <mesh_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`report_definitions <report_definitions>`       'report_definitions' child.

==============================================   ===============================

