version/0.19/_sources/api/solver/_autosummary/settings/mesh_1.rst.txt
:orphan:

.. _mesh_1:

mesh
====

.. autoclass:: ansys.fluent.core.solver.settings_241.mesh_1.mesh
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`mesh_child <mesh_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`report_definitions <report_definitions>`       'report_definitions' child.

==============================================   ===============================

